--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "project-js",
   "version": "0.1.0",
@@ -9,18 +10,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.2.12",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.12"
+    "simplex-noise": "^4.0.3"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.12",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.12"
+    "typescript": "^5"
   }
 }
