--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "project-js",
   "version": "0.1.0",
@@ -10,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.9.0",
     "next": "14.2.12",
     "react": "^18",
     "react-dom": "^18",
